[tool.poetry]
name = "poker"
version = "0.1.0"
description = "PokerBot"
authors = ["Nicolas Dickreuter <none@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
pandas = "^1.0.5"
pytest = "^5.4.3"
pylint = "^2.5.3"
pydocstyle = "^5.0.2"
numpy = "^1.19.0"
matplotlib = "^3.3.0"
scipy = "^1.5.1"
opencv-python = "4.2.0.34"
pillow = "^7.2.0"
pyinstaller = "^3.6"
pymongo = "^3.10.1"
pyqt5 = "^5.15.0"
pytesseract = "^0.3.4"
virtualbox = "^2.0.0"
pyyaml = "^5.3.1"
requests = "^2.24.0"
configobj = "^5.0.6"
jupyter = "^1.0.0"
xlib = "^0.21"
xlrd = "^1.2.0"
lmfit = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
